--- a/starter_notebook.ipynb
+++ b/starter_notebook.ipynb
@@ -42,6 +42,43 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## BUSINESS OVERVIEW\n",
+    "Zillow is a leading online real estate marketplace that provides valuable services and tools for home buyers, sellers, renters, and real estate professionals. \n",
+    "\n",
+    "The real estate investment firm is seeking to leverage data-driven insights to identify the best zip codes for real estate investment. The firm aims to make strategic investment decisions based on accurate forecasts of future real estate prices. By investing in the right locations, the company intends to maximize profitability and mitigate risk. The goal is to provide clients with attractive investment opportunities and generate sustainable returns.\n",
+    "\n",
+    "\n",
+    "### INTRODUCTION\n",
+    "We will be forecasting real estate prices of various zip codes using data from Zillow Research. The Zillow real-estate investment firm has tasked us with finding out which zip codes align with the investment firm's objectives and strategy.\n",
+    "\n",
+    "\n",
+    "### CHALLENGES\n",
+    "- In conducting the analysis, we had to determine how to best go about it given the ambiguity of the data. Finding out what would be the best method to go about the project in order to garner the best results. The major challenges were whether to direct the results towards maximizing profit, minimizing loss and risk and what time horizon would best fit for the project\n",
+    "\n",
+    "- Model Selection and Performance Evaluation:\n",
+    "\n",
+    "Selecting an appropriate time series forecasting model can be challenging due to the diverse nature of real estate data. There are several models available, such as ARIMA, SARIMA, Prophet, or machine learning algorithms, each with their strengths and limitations. Determining the most suitable model and optimizing its performance requires careful consideration and thorough evaluation using appropriate evaluation metrics.\n",
+    "\n",
+    "### PROBLEM STATEMENT\n",
+    "*The firm wants to maximize profitability while considering the associated risks and the time horizon for the investment.*\n",
+    "\n",
+    "### OBJECTIVES\n",
+    "The objective of this project is:\n",
+    "\n",
+    "1. To provide a recommendation for the top 5 best zip codes for a real estate investment firm to invest in.\n",
+    "\n",
+    "2. What are the historical trends and patterns in real estate prices for different zip codes?\n",
+    "\n",
+    "3. What are the key factors that influence real estate prices in each zip code?\n",
+    "\n",
+    "4. How do different zip codes compare in terms of risk and return on investment?"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
@@ -437,10 +474,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index(['RegionID', 'RegionName', 'City', 'State', 'Metro', 'CountyName',\n",
+       "       'SizeRank', '1996-04', '1996-05', '1996-06',\n",
+       "       ...\n",
+       "       '2017-07', '2017-08', '2017-09', '2017-10', '2017-11', '2017-12',\n",
+       "       '2018-01', '2018-02', '2018-03', '2018-04'],\n",
+       "      dtype='object', length=272)"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data.columns"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -685,7 +740,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.9"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
