--- a/starter_notebook.ipynb
+++ b/starter_notebook.ipynb
@@ -103,7 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -117,7 +117,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -490,7 +490,7 @@
        "[14723 rows x 272 columns]"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -503,7 +503,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -517,7 +517,7 @@
        "      dtype='object', length=272)"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -529,7 +529,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -557,7 +557,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -579,7 +579,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -599,7 +599,7 @@
        "Length: 272, dtype: object"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -617,7 +617,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -641,7 +641,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -677,7 +677,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -819,7 +819,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -849,7 +849,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -858,7 +858,7 @@
        "(3744704, 8)"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -870,9 +870,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "No duplicates found in the dataset\n"
+     ]
+    }
+   ],
    "source": [
     "# Checking for duplicated values\n",
     "check_duplicates(data)"
@@ -880,7 +888,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -911,8 +919,8 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>Metro</th>\n",
-       "      <td>1043</td>\n",
-       "      <td>7.084154</td>\n",
+       "      <td>236023</td>\n",
+       "      <td>6.302848</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -920,7 +928,7 @@
       ],
       "text/plain": [
        "       Missing Values  % of Total\n",
-       "Metro            1043    7.084154"
+       "Metro          236023    6.302848"
       ]
      },
      "metadata": {},
@@ -942,7 +950,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -981,7 +989,7 @@
        "Index: []"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -996,7 +1004,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -1099,7 +1107,7 @@
        "max    1.392280e+07  99901.000000  753844.000000  14723.000000"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1110,7 +1118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -1313,7 +1321,7 @@
        "[14723 rows x 9 columns]"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1378,20 +1386,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "DatetimeIndex([], dtype='datetime64[ns]', freq=None)"
-      ]
-     },
-     "execution_count": 80,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": []
   },
   {
