--- a/starter_notebook.ipynb
+++ b/starter_notebook.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Mod 4 Project - Starter Notebook\n",
+    "# Mod 4 Projects - Starter Notebook\n",
     "\n",
     "This notebook has been provided to you so that you can make use of the following starter code to help with the trickier parts of preprocessing the Zillow dataset. \n",
     "\n",
