--- a/starter_notebook.ipynb
+++ b/starter_notebook.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Mod 4 Projects - Starter Notebook\n",
+    "# Mod 4 Project - Starter Notebook\n",
     "\n",
     "This notebook has been provided to you so that you can make use of the following starter code to help with the trickier parts of preprocessing the Zillow dataset. \n",
     "\n",
@@ -103,7 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -117,7 +117,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -490,7 +490,7 @@
        "[14723 rows x 272 columns]"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -503,7 +503,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -517,7 +517,7 @@
        "      dtype='object', length=272)"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -529,7 +529,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -557,7 +557,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -579,7 +579,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -599,7 +599,7 @@
        "Length: 272, dtype: object"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -617,7 +617,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -641,7 +641,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -677,7 +677,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -819,7 +819,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -849,7 +849,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -858,7 +858,7 @@
        "(3744704, 8)"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -870,7 +870,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -888,7 +888,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -950,7 +950,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -989,22 +989,22 @@
        "Index: []"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# Foward filling missing values\n",
-    "merged_df.ffill(inplace=True)\n",
+    "new.ffill(inplace=True)\n",
     "\n",
     "# Confirming missing values have been filled\n",
-    "check_missing_values(merged_df)"
+    "check_missing_values(new)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -1028,310 +1028,92 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>value</th>\n",
        "      <th>RegionName</th>\n",
        "      <th>RegionID</th>\n",
        "      <th>SizeRank</th>\n",
+       "      <th>value</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>count</th>\n",
-       "      <td>1.472300e+04</td>\n",
-       "      <td>14723.000000</td>\n",
-       "      <td>14723.000000</td>\n",
-       "      <td>14723.000000</td>\n",
+       "      <td>3.744704e+06</td>\n",
+       "      <td>3.744704e+06</td>\n",
+       "      <td>3.744704e+06</td>\n",
+       "      <td>3.744704e+06</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>mean</th>\n",
-       "      <td>1.212783e+05</td>\n",
-       "      <td>48222.348706</td>\n",
-       "      <td>81075.010052</td>\n",
-       "      <td>7362.000000</td>\n",
+       "      <td>4.800889e+04</td>\n",
+       "      <td>8.101695e+04</td>\n",
+       "      <td>7.243785e+03</td>\n",
+       "      <td>2.076064e+05</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>std</th>\n",
-       "      <td>1.550408e+05</td>\n",
-       "      <td>29359.325439</td>\n",
-       "      <td>31934.118525</td>\n",
-       "      <td>4250.308342</td>\n",
+       "      <td>2.959375e+04</td>\n",
+       "      <td>3.225436e+04</td>\n",
+       "      <td>4.237746e+03</td>\n",
+       "      <td>2.400207e+05</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>min</th>\n",
+       "      <td>1.001000e+03</td>\n",
+       "      <td>5.819600e+04</td>\n",
+       "      <td>1.000000e+00</td>\n",
        "      <td>1.130000e+04</td>\n",
-       "      <td>1001.000000</td>\n",
-       "      <td>58196.000000</td>\n",
-       "      <td>1.000000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>25%</th>\n",
-       "      <td>6.930000e+04</td>\n",
-       "      <td>22101.500000</td>\n",
-       "      <td>67174.500000</td>\n",
-       "      <td>3681.500000</td>\n",
+       "      <td>2.163500e+04</td>\n",
+       "      <td>6.695300e+04</td>\n",
+       "      <td>3.572000e+03</td>\n",
+       "      <td>9.790000e+04</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>50%</th>\n",
-       "      <td>9.990000e+04</td>\n",
-       "      <td>46106.000000</td>\n",
-       "      <td>78007.000000</td>\n",
-       "      <td>7362.000000</td>\n",
+       "      <td>4.582700e+04</td>\n",
+       "      <td>7.792000e+04</td>\n",
+       "      <td>7.179000e+03</td>\n",
+       "      <td>1.476000e+05</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>75%</th>\n",
-       "      <td>1.436000e+05</td>\n",
-       "      <td>75205.500000</td>\n",
-       "      <td>90920.500000</td>\n",
-       "      <td>11042.500000</td>\n",
+       "      <td>7.547300e+04</td>\n",
+       "      <td>9.104500e+04</td>\n",
+       "      <td>1.088300e+04</td>\n",
+       "      <td>2.372000e+05</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>max</th>\n",
-       "      <td>1.392280e+07</td>\n",
-       "      <td>99901.000000</td>\n",
-       "      <td>753844.000000</td>\n",
-       "      <td>14723.000000</td>\n",
+       "      <td>9.990100e+04</td>\n",
+       "      <td>7.538440e+05</td>\n",
+       "      <td>1.472300e+04</td>\n",
+       "      <td>1.931490e+07</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "              value    RegionName       RegionID      SizeRank\n",
-       "count  1.472300e+04  14723.000000   14723.000000  14723.000000\n",
-       "mean   1.212783e+05  48222.348706   81075.010052   7362.000000\n",
-       "std    1.550408e+05  29359.325439   31934.118525   4250.308342\n",
-       "min    1.130000e+04   1001.000000   58196.000000      1.000000\n",
-       "25%    6.930000e+04  22101.500000   67174.500000   3681.500000\n",
-       "50%    9.990000e+04  46106.000000   78007.000000   7362.000000\n",
-       "75%    1.436000e+05  75205.500000   90920.500000  11042.500000\n",
-       "max    1.392280e+07  99901.000000  753844.000000  14723.000000"
+       "         RegionName      RegionID      SizeRank         value\n",
+       "count  3.744704e+06  3.744704e+06  3.744704e+06  3.744704e+06\n",
+       "mean   4.800889e+04  8.101695e+04  7.243785e+03  2.076064e+05\n",
+       "std    2.959375e+04  3.225436e+04  4.237746e+03  2.400207e+05\n",
+       "min    1.001000e+03  5.819600e+04  1.000000e+00  1.130000e+04\n",
+       "25%    2.163500e+04  6.695300e+04  3.572000e+03  9.790000e+04\n",
+       "50%    4.582700e+04  7.792000e+04  7.179000e+03  1.476000e+05\n",
+       "75%    7.547300e+04  9.104500e+04  1.088300e+04  2.372000e+05\n",
+       "max    9.990100e+04  7.538440e+05  1.472300e+04  1.931490e+07"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "merged_df.describe()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 33,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>time</th>\n",
-       "      <th>value</th>\n",
-       "      <th>RegionName</th>\n",
-       "      <th>RegionID</th>\n",
-       "      <th>SizeRank</th>\n",
-       "      <th>City</th>\n",
-       "      <th>State</th>\n",
-       "      <th>Metro</th>\n",
-       "      <th>CountyName</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>1996-04-01</td>\n",
-       "      <td>334200.0</td>\n",
-       "      <td>60657</td>\n",
-       "      <td>84654</td>\n",
-       "      <td>1</td>\n",
-       "      <td>Chicago</td>\n",
-       "      <td>IL</td>\n",
-       "      <td>Chicago</td>\n",
-       "      <td>Cook</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>265</th>\n",
-       "      <td>1996-04-01</td>\n",
-       "      <td>235700.0</td>\n",
-       "      <td>75070</td>\n",
-       "      <td>90668</td>\n",
-       "      <td>2</td>\n",
-       "      <td>McKinney</td>\n",
-       "      <td>TX</td>\n",
-       "      <td>Dallas-Fort Worth</td>\n",
-       "      <td>Collin</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>530</th>\n",
-       "      <td>1996-04-01</td>\n",
-       "      <td>210400.0</td>\n",
-       "      <td>77494</td>\n",
-       "      <td>91982</td>\n",
-       "      <td>3</td>\n",
-       "      <td>Katy</td>\n",
-       "      <td>TX</td>\n",
-       "      <td>Houston</td>\n",
-       "      <td>Harris</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>795</th>\n",
-       "      <td>1996-04-01</td>\n",
-       "      <td>498100.0</td>\n",
-       "      <td>60614</td>\n",
-       "      <td>84616</td>\n",
-       "      <td>4</td>\n",
-       "      <td>Chicago</td>\n",
-       "      <td>IL</td>\n",
-       "      <td>Chicago</td>\n",
-       "      <td>Cook</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1060</th>\n",
-       "      <td>1996-04-01</td>\n",
-       "      <td>77300.0</td>\n",
-       "      <td>79936</td>\n",
-       "      <td>93144</td>\n",
-       "      <td>5</td>\n",
-       "      <td>El Paso</td>\n",
-       "      <td>TX</td>\n",
-       "      <td>El Paso</td>\n",
-       "      <td>El Paso</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3744474</th>\n",
-       "      <td>2014-07-01</td>\n",
-       "      <td>136900.0</td>\n",
-       "      <td>62215</td>\n",
-       "      <td>85339</td>\n",
-       "      <td>14208</td>\n",
-       "      <td>Albers</td>\n",
-       "      <td>IL</td>\n",
-       "      <td>St. Louis</td>\n",
-       "      <td>Clinton</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3744520</th>\n",
-       "      <td>2014-07-01</td>\n",
-       "      <td>70500.0</td>\n",
-       "      <td>48157</td>\n",
-       "      <td>79020</td>\n",
-       "      <td>14268</td>\n",
-       "      <td>Luna Pier</td>\n",
-       "      <td>MI</td>\n",
-       "      <td>Monroe</td>\n",
-       "      <td>Monroe</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3744566</th>\n",
-       "      <td>2014-07-01</td>\n",
-       "      <td>494600.0</td>\n",
-       "      <td>49636</td>\n",
-       "      <td>79832</td>\n",
-       "      <td>14342</td>\n",
-       "      <td>Glen Arbor</td>\n",
-       "      <td>MI</td>\n",
-       "      <td>Traverse City</td>\n",
-       "      <td>Leelanau</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3744612</th>\n",
-       "      <td>2014-07-01</td>\n",
-       "      <td>74700.0</td>\n",
-       "      <td>62440</td>\n",
-       "      <td>85489</td>\n",
-       "      <td>14578</td>\n",
-       "      <td>Lerna</td>\n",
-       "      <td>IL</td>\n",
-       "      <td>Charleston</td>\n",
-       "      <td>Coles</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3744658</th>\n",
-       "      <td>2014-07-01</td>\n",
-       "      <td>27400.0</td>\n",
-       "      <td>28039</td>\n",
-       "      <td>69681</td>\n",
-       "      <td>14708</td>\n",
-       "      <td>East Spencer</td>\n",
-       "      <td>NC</td>\n",
-       "      <td>Charlotte</td>\n",
-       "      <td>Rowan</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>14723 rows × 9 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "              time     value  RegionName  RegionID  SizeRank          City  \\\n",
-       "0       1996-04-01  334200.0       60657     84654         1       Chicago   \n",
-       "265     1996-04-01  235700.0       75070     90668         2      McKinney   \n",
-       "530     1996-04-01  210400.0       77494     91982         3          Katy   \n",
-       "795     1996-04-01  498100.0       60614     84616         4       Chicago   \n",
-       "1060    1996-04-01   77300.0       79936     93144         5       El Paso   \n",
-       "...            ...       ...         ...       ...       ...           ...   \n",
-       "3744474 2014-07-01  136900.0       62215     85339     14208        Albers   \n",
-       "3744520 2014-07-01   70500.0       48157     79020     14268     Luna Pier   \n",
-       "3744566 2014-07-01  494600.0       49636     79832     14342    Glen Arbor   \n",
-       "3744612 2014-07-01   74700.0       62440     85489     14578         Lerna   \n",
-       "3744658 2014-07-01   27400.0       28039     69681     14708  East Spencer   \n",
-       "\n",
-       "        State              Metro CountyName  \n",
-       "0          IL            Chicago       Cook  \n",
-       "265        TX  Dallas-Fort Worth     Collin  \n",
-       "530        TX            Houston     Harris  \n",
-       "795        IL            Chicago       Cook  \n",
-       "1060       TX            El Paso    El Paso  \n",
-       "...       ...                ...        ...  \n",
-       "3744474    IL          St. Louis    Clinton  \n",
-       "3744520    MI             Monroe     Monroe  \n",
-       "3744566    MI      Traverse City   Leelanau  \n",
-       "3744612    IL         Charleston      Coles  \n",
-       "3744658    NC          Charlotte      Rowan  \n",
-       "\n",
-       "[14723 rows x 9 columns]"
-      ]
-     },
-     "execution_count": 33,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "# Making time the index\n",
-    "merged_df['time'] = pd.to_datetime(merged_df['time'], dayfirst=True)\n",
-    "merged_df.set_index('time')\n",
-    "\n",
-    "merged_df"
+    "new.describe()"
    ]
   },
   {
@@ -1386,9 +1168,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 80,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "DatetimeIndex([], dtype='datetime64[ns]', freq=None)"
+      ]
+     },
+     "execution_count": 80,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": []
   },
   {
