--- a/timeseries.ipynb
+++ b/timeseries.ipynb
@@ -2608,7 +2608,9 @@
     "# Reshape the dataset to long format\n",
     "df_long = pd.melt(top5, id_vars=['RegionID', 'RegionName', 'City', 'State', 'Metro', 'CountyName', 'SizeRank', 'ROI'],\n",
     "                  var_name='time', value_name='value')\n",
+    "\n",
     "df_long['time'] = pd.to_datetime(df_long.time)\n",
+    "\n",
     "# Display the reshaped dataset\n",
     "df_long"
    ]
@@ -2757,7 +2759,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The boxplot shows a higher distribution in the state of California is higher compared to NewYork and DC."
+    "Los Angels exhibits a wider spread of property values, suggesting a greater diversity and variability in the housing market."
    ]
   },
   {
@@ -2810,6 +2812,7 @@
     }
    ],
    "source": [
+    "#Property Count by City\n",
     "city_counts = df_long['City'].value_counts()\n",
     "plt.bar(city_counts.index, city_counts.values)\n",
     "plt.xlabel('City')\n",
@@ -2820,17 +2823,17 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "attachments": {},
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "sns.boxplot(x='City', y='value', data=df)\n",
-    "plt.xlabel('City')\n",
-    "plt.ylabel('Property Value')\n",
-    "plt.title('Distribution of Property Values by City')\n",
-    "plt.xticks(rotation=90)\n",
-    "plt.show()\n"
+    "The plot provides a visual comparison of the property counts among different cities, allowing us to identify cities with a higher concentration of properties.\n",
+    "\n",
+    "- The number of properties varies across different cities, indicating variations in the real estate market.\n",
+    "\n",
+    "- Some cities (Washington & New York) have a higher count of properties, suggesting a larger availability and demand for real estate in those areas.\n",
+    "\n",
+    "- By examining the relative heights of the bars, we can gauge the magnitude of the property count disparity between cities."
    ]
   },
   {
@@ -4909,10 +4912,11 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### LosAngeles_90046 Forecasting"
+    "#### NewYork_11220 Forecasting"
    ]
   },
   {
@@ -5725,11 +5729,12 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "\n",
-    "#### NewYork_11226 Forecasting"
+    "#### LosAngeles_90046 Forecasting"
    ]
   },
   {
@@ -6696,10 +6701,11 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Washington_2002 Forecasting"
+    "#### Washington_20002 Forecasting"
    ]
   },
   {
