notebook update and powerpoint

--- a/timeseries.ipynb
+++ b/timeseries.ipynb
@@ -1,6 +1,7 @@
 {
  "cells": [
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -11,7 +12,13 @@
     "* Brian Muli \n",
     "* Joel Omondi \n",
     "* Ian Tulienge \n",
-    "* Lavender Echesa \n"
+    "* Lavender Echesa \n",
+    "\n",
+    "Github URL: https://github.com/Lawez/phase-4-group-project \n",
+    "\n",
+    "Trello link: https://trello.com/b/aI7c1mO8/phase-4-project \n",
+    "\n",
+    "Powerpoint link: https://www.canva.com/design/DAFgoWWoskw/FG_bO59PhIOkzW-1KxoeOA/edit?utm_content=DAFgoWWoskw&utm_campaign=designshare&utm_medium=link2&utm_source=sharebutton "
    ]
   },
   {
